--- a/from/menu.html
+++ b/from/menu.html
@@ -1,5 +1,9 @@
-<a href="" title="i"><img src="img/logo.png" id="image_logo" alt=""></a>
+<div class="logomobile">
+    <a href="" title="i" class="logo_a">
+        <img src="img/logo.png" id="image_logo" alt=""></a>
+</div>
 <input title="h" type="checkbox" id="check">
+
 <label for="check" id="labelmenu"><img src="img/menu.svg" alt=""></label>
 <div id="menu_child">
     <a href="">Live TV</a>
