--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Insert your website description here.">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>SnapNews</title>
     <link rel="stylesheet" href="css/main.css">
@@ -12,6 +14,10 @@
 
 <body>
     <div id="menu"></div>
+
+    <div id="maincontent"></div>
+
+
     <script src="js/fetch.js"></script>
 </body>
 
