--- a/from/maincontent.html
+++ b/from/maincontent.html
@@ -2,6 +2,7 @@
     <div class="main_child">
         <img src="https://ichef.bbci.co.uk/news/1024/branded_news/AEB4/production/_129042744_bbcm_south-korea_country_profile_200323.png"
             alt="">
+      <h2>LOREM IPSUM</h2>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus repellendus id quia
         laudantium quis ipsum velit officia
     </div>
@@ -11,6 +12,7 @@
     <div class="main_child">
         <img src="https://static.euronews.com/articles/stories/06/17/53/80/1440x810_cmsv2_a0a5e7cc-ffae-5264-a7c6-8bd86d6b94e7-6175380.jpg"
             alt="">
+      <h2>MUSPI MEROL</h2>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus repellendus id quia
         laudantium quis ipsum velit officia ducimus delectus illum provident natus voluptatum est tempora reiciendis
         excepturi distinctio, culpa quisquam.
