--- a/from/menu.html
+++ b/from/menu.html
@@ -4,7 +4,7 @@
 </div>
 <input title="h" type="checkbox" id="check">
 
-<label for="check" id="labelmenu"><img src="img/menu.svg" alt=""></label>
+<label for="check" id="labelmenu"><img src="img/menu.svg" alt="" id="img-menu"></label>
 <div id="menu_child">
     <a href="">Live TV</a>
     <a href="">NEWS</a>
