a which is making useless full length reduced

--- a/contents/from/menu.html
+++ b/contents/from/menu.html
@@ -1,4 +1,4 @@
-<a href=""><h1 class="menulogo">Moviate</h1></a>
+<h1 class="menulogo"><a href="">Moviate</a></h1>
 
 <nav class="menuitems">
     <a href="">Live News TV</a>
