--- a/contents/from/menu.html
+++ b/contents/from/menu.html
@@ -1,9 +1,8 @@
-<h1 class="menulogo"><a href="">Moviate</a></h1>
-
+<a href=""><img src="logo.png" title="Logo" class="logomain"></a>
 <nav class="menuitems">
     <a href="">Live News TV</a>
-    <a href="">Sanatan Dharma</a>
-    <a href="">History</a>
+    <a href="">Sanatan Dharma </a>
+    <a href="">History </a>
     <a href="">World Politics</a>
     <a href="">eBooks</a>
     <a href="">Videos</a>
